infra/argocd/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  routes:
    - match: Host(`argo.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argo.k8s.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: rooty-dev-wildcard
